--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.7",
     "@headlessui/react": "^2.1.8",
     "@radix-ui/react-dialog": "^1.1.1",
-    "gsap": "^3.12.5",
+    "@tensorflow-models/face-detection": "^1.0.2",
+    "@tensorflow/tfjs": "^4.21.0",
+    "axios": "^1.7.7",
     "date-fns": "^3.6.0",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.441.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
