--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
+    "@mui/styled-engine-sc": "^6.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.441.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.26.0",
     "recharts": "^2.12.7",
+    "styled-components": "^6.1.13",
     "ui": "^0.2.4"
   },
   "devDependencies": {
