--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.1.8",
     "@mui/styled-engine-sc": "^6.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
+    "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.441.0",
