--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@headlessui/react": "^2.1.8",
     "@mui/styled-engine-sc": "^6.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.441.0",
     "react": "^17.0.0 || ^18.0.0",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.26.0",
     "recharts": "^2.12.7",
