--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "ui": "^0.2.4"
   },
