--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@tensorflow-models/face-detection": "^1.0.2",
     "@tensorflow-models/face-landmarks-detection": "^1.0.5",
     "@tensorflow/tfjs": "^4.21.0",
-    "@tensorflow/tfjs-backend-webgl": "^4.21.0",
+    "@tensorflow/tfjs-backend-webgl": "^3.12.0",
     "@tensorflow/tfjs-converter": "^4.21.0",
     "@tensorflow/tfjs-core": "^4.21.0",
     "axios": "^1.7.7",
@@ -36,6 +36,7 @@
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@types/react-scroll": "^1.8.10",
+    "@types/webgl2": "^0.0.11",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
