--- a/.github/workflows/deployServer.yml
+++ b/.github/workflows/deployServer.yml
@@ -22,4 +22,4 @@ jobs:
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./dist/
-        server-dir: /smart-att.curaweda.com
+        server-dir: /smart-att.curaweda.com/
