--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "gsap": "^3.12.5",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.441.0",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
@@ -23,9 +24,12 @@
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
-    "ui": "^0.2.4"
+    "ui": "^0.2.4",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^22.7.7",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@types/react-scroll": "^1.8.10",
